<resources>
    <string name="app_name">EMVL3KT</string>
    <string name="username">ID</string>
    <string name="usernametips">Please input account</string>
    <string name="pwdtips">Please input the password</string>
    <string name="keymanagement">Key Management</string>
    <string name="exit">Exit</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string-array name="spinneritem">
        <item name="first">first</item>
        <item name="second">second</item>
        <item name="thread">thread</item>
        <item name="four">four</item>
        <item name="fire">fire</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_line_height">LineHeightActivity</string>

    <string name="phone_language_summary" msgid="3871309445655554211"></string>
    <string name="auto_replace" msgid="6199184757891937822">"แทนที่อัตโนมัติ"</string>
    <string name="auto_replace_summary" msgid="370288728200084466">"แก้คำที่พิมพ์ผิด"</string>
    <string name="auto_caps" msgid="6379232078052591265">"การทำให้เป็นตัวพิมพ์ใหญ่โดยอัตโนมัติ"</string>
    <string name="auto_caps_summary" msgid="6358102538315261466">"ปรับอักษรขึ้นต้นประโยคเป็นตัวพิมพ์ใหญ่"</string>
    <string name="auto_punctuate" msgid="4595367243950425833">"ใส่เครื่องหมายวรรคตอนอัตโนมัติ"</string>
    <string name="hardkeyboard_category" msgid="5957168411305769899">"การตั้งค่าแป้นพิมพ์บนเครื่อง"</string>
    <string name="auto_punctuate_summary" msgid="4372126865670574837">"กดปุ่ม Space สองครั้งเพื่อแทรก \".\""</string>
    <string name="show_password" msgid="3001113966880559611">"กำหนดให้เห็นรหัสผ่านได้"</string>
    <string name="spellchecker_quick_settings" msgid="246728645150092058">"การตั้งค่า"</string>
    <string name="spellchecker_language" msgid="6041050114690541437">"ภาษา"</string>
    <string name="pointer_settings_category" msgid="8183819795164034286">"เมาส์/แทร็กแพด"</string>
    <string name="pointer_speed" msgid="1221342330217861616">"ความเร็วของตัวชี้"</string>
    <string name="game_controller_settings_category" msgid="8794508575329923718">"อุปกรณ์ควบคุมเกม"</string>
    <string name="vibrate_input_devices" msgid="2599591466928793082">"ใช้การสั่นเตือน"</string>
    <string name="vibrate_input_devices_summary" msgid="4595570516865299153">"เปลี่ยนการสั่นเตือนไปที่อุปกรณ์ควบคุมเกมเมื่อมีการเชื่อมต่อ"</string>
    <string name="keyboard_layout_dialog_title" msgid="8030087214949381372">"เลือกรูปแบบแป้นพิมพ์"</string>
    <string name="keyboard_layout_dialog_setup_button" msgid="8514583747236476384">"ตั้งค่ารูปแบบแป้นพิมพ์"</string>
    <string name="keyboard_layout_dialog_switch_hint" msgid="3889961090676293795">"หากต้องการสลับ กด Control-Spacebar"</string>
    <string name="keyboard_layout_default_label" msgid="2952672513543482165">"ค่าเริ่มต้น"</string>
    <string name="keyboard_layout_picker_title" msgid="556081931972771610">"รูปแบบแป้นพิมพ์"</string>
    <string name="user_dict_settings_title" msgid="3427169369758733521">"พจนานุกรมส่วนตัว"</string>
</resources>
